# stremio-shell-ng

./: .gitignore  Cargo.toml  README.md  build.ps1  build.rs  generate_descriptor.js  mpv.def  mpv.lib  resources.rc  rust-toolchain.toml  upload.ps1
.github/workflows/: build.yml  test.yml
setup/: Stremio.iss  create_setup.bat  generate_stremio-runtime.bat  get_exe_from_zip.ps1
src/: main.rs
src/stremio_app/: app.rs  constants.rs  ipc.rs  mod.rs  named_pipe.rs  splash.rs  stremio_app.rs  systray.rs  updater.rs  window_helper.rs
src/stremio_app/stremio_player/: communication.rs  communication_tests.rs  mod.rs  player.rs  stremio_player.rs
src/stremio_app/stremio_server/: mod.rs  server.rs  stremio_server.rs
src/stremio_app/stremio_wevbiew/: constants.rs  mod.rs  stremio_wevbiew.rs  wevbiew.rs
