[package]
name = "stremio-shell-ng"
version = "0.1.0"
edition = "2018"

[dependencies]
once_cell = "1.3.1"
native-windows-gui = { version = "1.0.4", features = [
    "high-dpi",
    "notice",
    "tray-notification",
    "menu",
] }
native-windows-derive = "1.0.3"
winapi = { version = "0.3.9", features = [
    "libloaderapi",
    "handleapi",
    "wincon",
    "winuser",
] }
webview2 = "0.1.0"
webview2-sys = "0.1.0-beta.1"
libmpv = { version = "2.0.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
open = "1"
urlencoding = "2.1.0"
bitflags = "1.2.1"
win32job = "1"
parse-display = "0.5.1"
crossbeam-utils = "0.8.5"

[build-dependencies]
embed-resource = "1.3"
[dev-dependencies]
serde_test = "1.0.*"
