[package]
name = "stremio-shell-ng"
version = "5.0.0"
edition = "2018"

[dependencies]
once_cell = "1.19"
native-windows-gui = { version = "1", features = [
    "high-dpi",
    "notice",
    "tray-notification",
    "menu",
] }
native-windows-derive = "1"
winapi = { version = "0.3.9", features = [
    "libloaderapi",
    "handleapi",
    "jobapi2",
    "wincon",
    "winuser",
    "namedpipeapi"
] }
webview2 = "0.1.4"
webview2-sys = "0.1.1"
libmpv-sirno = "2.0.2-fork.1"
libmpv-sys-sirno = "2.0.0-fork.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive", "unicode"] }
open = "5"
urlencoding = "2"
bitflags = "2"
parse-display = "0.9"
flume = "0.11"
whoami = "1.5"
anyhow = "1"
semver = "1"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["stream", "json", "blocking"] }
rand = "0.8"
url = { version = "2", features = ["serde"] }


[build-dependencies]
winres = "0.1"
chrono = "0.4.22"
[dev-dependencies]
serde_test = "1.0.*"
